<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_event"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_games"
            android:icon="@drawable/ic_my_games"
            android:title="@string/menu_item_my_events"/>
        <item
            android:id="@+id/nav_add_game"
            android:icon="@drawable/ic_add_game"
            android:title="@string/menu_item_add_event"/>
    </group>

    <group android:id="@+id/group_user">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_item_profile"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/menu_item_friends"/>
    </group>

    <group android:id="@+id/group_logout">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_item_settings"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_item_logout"/>
    </group>

</menu>
