<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_character_class_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.createCharacter.CreateCharacterActivity">

    <LinearLayout
        android:id="@+id/create_character_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/createCharacterClassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Klasa postaci" />

        <RadioGroup
            android:id="@+id/selectClassTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="294dp">

            <RadioButton
                android:id="@+id/radioBard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_bard" />

            <RadioButton
                android:id="@+id/radioWarrior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_warrior" />

            <RadioButton
                android:id="@+id/radioThief"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_thief" />

            <RadioButton
                android:id="@+id/radioWizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_wizard" />


        </RadioGroup>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/action_next"
            android:theme="@style/ColoredButton.LightRed" />


    </LinearLayout>

    <include layout="@layout/progress_bar"/>

</LinearLayout>
