<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_character_sex_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.createCharacter.CreateCharacterSex">

    <LinearLayout
        android:id="@+id/create_character_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/characterView"
            android:layout_width="match_parent"
            android:layout_height="333dp"
            android:src="@drawable/wizard" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/createCharacterSexText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character_sex"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="120dp"
                android:layout_height="154dp"
                android:visibility="invisible" />

            <RadioGroup
                android:id="@+id/selectSexGroup"
                android:layout_width="250dp"
                android:layout_height="154dp">

                <RadioButton
                    android:id="@+id/radioWomen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_woman"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioButton
                    android:id="@+id/radioMan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_man"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="@string/action_back"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:theme="@style/ColoredButton.LightRed" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="@string/action_next"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:theme="@style/ColoredButton.LightRed" />

        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/progress_bar"/>

</LinearLayout>
